OldArchive/fc3721164d111d36bc063ae261d959bb-d6c803482d553f395422ddf5510f4bb0/output
+ g++ -std=c++11 -O2 -Wall -Wextra -pedantic -pthread main.cpp
main.cpp:1:9: warning: #pragma once in main file [enabled by default]
 #pragma once
         ^
main.cpp:3:0: warning: ignoring #pragma warning  [-Wunknown-pragmas]
 #pragma warning( push, 0 )
 ^
In file included from /usr/local/include/llvm/Support/type_traits.h:20:0,
                 from /usr/local/include/llvm/ADT/StringRef.h:13,
                 from /usr/local/include/llvm/ADT/StringMap.h:17,
                 from /usr/local/include/llvm/Support/Host.h:17,
                 from main.cpp:4:
/usr/local/include/llvm/Support/DataTypes.h:49:3: error: #error "Must #define __STDC_LIMIT_MACROS before #including Support/DataTypes.h"
 # error "Must #define __STDC_LIMIT_MACROS before #including Support/DataTypes.h"
   ^
/usr/local/include/llvm/Support/DataTypes.h:53:3: error: #error "Must #define __STDC_CONSTANT_MACROS before " "#including Support/DataTypes.h"
 # error "Must #define __STDC_CONSTANT_MACROS before " \
   ^
main.cpp:14:0: warning: ignoring #pragma warning  [-Wunknown-pragmas]
 #pragma warning( pop )
 ^
main.cpp:20:49: error: ‘Vendor’ has not been declared
   Compiler( int argc, const char* const argv[], Vendor vendor );
                                                 ^
main.cpp:22:15: error: ‘Furrovine’ has not been declared
   bool Parse( Furrovine::String filename );
               ^
main.cpp:22:33: error: expected ‘,’ or ‘...’ before ‘filename’
   bool Parse( Furrovine::String filename );
                                 ^
main.cpp:25:3: error: ‘Vendor’ does not name a type
   Vendor vendor;
   ^
main.cpp:26:3: error: ‘CommandArguments’ does not name a type
   CommandArguments compilerargs;
   ^
main.cpp:27:3: error: ‘CompilerInstance’ in namespace ‘clang’ does not name a type
   clang::CompilerInstance compilerinstance;
   ^
main.cpp:29:3: error: ‘TargetOptions’ in namespace ‘clang’ does not name a type
   clang::TargetOptions targetoptions;
   ^
main.cpp:30:19: error: ‘CompilerInvocation’ is not a member of ‘clang’
   llvm::OwningPtr<clang::CompilerInvocation> compilerinvocation;
                   ^
main.cpp:30:19: error: ‘CompilerInvocation’ is not a member of ‘clang’
main.cpp:30:44: error: template argument 1 is invalid
   llvm::OwningPtr<clang::CompilerInvocation> compilerinvocation;
                                            ^
main.cpp:44:58: error: ‘Vendor’ has not been declared
  Compiler::Compiler( int argc, const char* const argv[], Vendor vend ) : vendor( vend ), compilerargs( argc, argv ) {
                                                          ^
main.cpp: In constructor ‘Furroflect::Compiler::Compiler(int, const char* const*, int)’:
main.cpp:44:74: error: class ‘Furroflect::Compiler’ does not have any field named ‘vendor’
  Compiler::Compiler( int argc, const char* const argv[], Vendor vend ) : vendor( vend ), compilerargs( argc, argv ) {
                                                                          ^
main.cpp:44:90: error: class ‘Furroflect::Compiler’ does not have any field named ‘compilerargs’
  Compiler::Compiler( int argc, const char* const argv[], Vendor vend ) : vendor( vend ), compilerargs( argc, argv ) {
                                                                                          ^
main.cpp:45:8: error: ‘vendor’ was not declared in this scope
   if ( vendor == Vendor::MSVC ) {
        ^
main.cpp:45:18: error: ‘Vendor’ has not been declared
   if ( vendor == Vendor::MSVC ) {
                  ^
main.cpp:51:3: error: ‘compilerinstance’ was not declared in this scope
   compilerinstance.createDiagnostics( new clang::TextDiagnosticPrinter( llvm::outs( ), &diagnosticoptions ), true );
   ^
main.cpp:54:22: error: request for member ‘reset’ in ‘((Furroflect::Compiler*)this)->Furroflect::Compiler::compilerinvocation’, which is of non-class type ‘int’
   compilerinvocation.reset( new clang::CompilerInvocation( ) );
                      ^
main.cpp:54:33: error: expected type-specifier
   compilerinvocation.reset( new clang::CompilerInvocation( ) );
                                 ^
main.cpp:55:10: error: ‘clang::CompilerInvocation’ has not been declared
   clang::CompilerInvocation::CreateFromArgs( *compilerinvocation, argv + 1, argv + argc, compilerinstance.getDiagnostics( ) );
          ^
main.cpp:55:47: error: invalid type argument of unary ‘*’ (have ‘int’)
   clang::CompilerInvocation::CreateFromArgs( *compilerinvocation, argv + 1, argv + argc, compilerinstance.getDiagnostics( ) );
                                               ^
main.cpp:56:54: error: request for member ‘get’ in ‘((Furroflect::Compiler*)this)->Furroflect::Compiler::compilerinvocation’, which is of non-class type ‘int’
   compilerinstance.setInvocation( compilerinvocation.get() );
                                                      ^
main.cpp:59:60: error: base operand of ‘->’ is not a pointer
   clang::LangOptions& languageoptions = *compilerinvocation->getLangOpts( );
                                                            ^
main.cpp:60:10: error: ‘clang::CompilerInvocation’ has not been declared
   clang::CompilerInvocation::setLangDefaults( languageoptions,
          ^
main.cpp:61:4: error: ‘IK_CXX’ is not a member of ‘clang’
    clang::IK_CXX, vendor == Vendor::GCC ? clang::LangStandard::lang_gnucxx0x : clang::LangStandard::lang_cxx0x );
    ^
main.cpp:61:19: error: ‘vendor’ was not declared in this scope
    clang::IK_CXX, vendor == Vendor::GCC ? clang::LangStandard::lang_gnucxx0x : clang::LangStandard::lang_cxx0x );
                   ^
main.cpp:61:29: error: ‘Vendor’ has not been declared
    clang::IK_CXX, vendor == Vendor::GCC ? clang::LangStandard::lang_gnucxx0x : clang::LangStandard::lang_cxx0x );
                             ^
main.cpp:73:18: error: ‘Vendor’ has not been declared
   if ( vendor == Vendor::MSVC ) {
                  ^
main.cpp:79:23: error: ‘Vendor’ has not been declared
   else if ( vendor == Vendor::GCC ) {
                       ^
main.cpp:83:3: error: ‘targetoptions’ was not declared in this scope
   targetoptions.Triple = llvm::sys::getDefaultTargetTriple( );
   ^
main.cpp:90:31: error: incomplete type ‘clang::TargetInfo’ used in nested name specifier
   compilerinstance.setTarget( clang::TargetInfo::CreateTargetInfo( 
                               ^
main.cpp:102:9: error: ‘Furrovine’ has not been declared
   for ( Furrovine::ulword i = 0;; i++ ) {
         ^
main.cpp:102:27: error: expected ‘;’ before ‘i’
   for ( Furrovine::ulword i = 0;; i++ ) {
                           ^
main.cpp:102:35: error: ‘i’ was not declared in this scope
   for ( Furrovine::ulword i = 0;; i++ ) {
                                   ^
main.cpp:103:4: error: ‘Furrovine’ has not been declared
    Furrovine::String include = compilerargs.After( "-i", i );
    ^
main.cpp:103:22: error: expected ‘;’ before ‘include’
    Furrovine::String include = compilerargs.After( "-i", i );
                      ^
main.cpp:104:9: error: ‘include’ was not declared in this scope
    if ( include.IsEmpty( ) )
         ^
main.cpp:106:41: error: ‘include’ was not declared in this scope
    llvm::StringRef llvminclude = (char*)include.data( );
                                         ^
main.cpp:107:23: error: invalid use of incomplete type ‘class clang::HeaderSearchOptions’
    headersearchoptions.AddPath( llvminclude, clang::frontend::Angled, false, false );
                       ^
In file included from main.cpp:11:0:
/usr/local/include/clang/Lex/HeaderSearch.h:33:7: error: forward declaration of ‘class clang::HeaderSearchOptions’
 class HeaderSearchOptions;
       ^
main.cpp:107:46: error: ‘Angled’ is not a member of ‘clang::frontend’
    headersearchoptions.AddPath( llvminclude, clang::frontend::Angled, false, false );
                                              ^
main.cpp:109:9: error: ‘Furrovine’ has not been declared
   for ( Furrovine::ulword i = 0;; i++ ) {
         ^
main.cpp:109:27: error: expected ‘;’ before ‘i’
   for ( Furrovine::ulword i = 0;; i++ ) {
                           ^
main.cpp:109:35: error: ‘i’ was not declared in this scope
   for ( Furrovine::ulword i = 0;; i++ ) {
                                   ^
main.cpp:110:4: error: ‘Furrovine’ has not been declared
    Furrovine::String include = compilerargs.After( "-isystem", i );
    ^
main.cpp:110:22: error: expected ‘;’ before ‘include’
    Furrovine::String include = compilerargs.After( "-isystem", i );
                      ^
main.cpp:111:41: error: ‘include’ was not declared in this scope
    llvm::StringRef llvminclude = (char*)include.data( );
                                         ^
main.cpp:114:23: error: invalid use of incomplete type ‘class clang::HeaderSearchOptions’
    headersearchoptions.AddPath( llvminclude, clang::frontend::System, false, false );
                       ^
In file included from main.cpp:11:0:
/usr/local/include/clang/Lex/HeaderSearch.h:33:7: error: forward declaration of ‘class clang::HeaderSearchOptions’
 class HeaderSearchOptions;
       ^
main.cpp:114:46: error: ‘System’ is not a member of ‘clang::frontend’
    headersearchoptions.AddPath( llvminclude, clang::frontend::System, false, false );
                                              ^
main.cpp: At global scope:
main.cpp:119:24: error: ‘bool Furroflect::Compiler::Parse’ is not a static member of ‘class Furroflect::Compiler’
  bool Compiler::Parse( Furrovine::String filename ) {
                        ^
main.cpp:119:24: error: ‘Furrovine’ has not been declared
main.cpp:119:53: error: expected ‘,’ or ‘;’ before ‘{’ token
  bool Compiler::Parse( Furrovine::String filename ) {
                                                     ^
